--- a/amplify.yml
+++ b/amplify.yml
@@ -1,21 +1,22 @@
 version: 1
 backend:
-  phases:
-    build:
-      commands:
-        - npm ci --cache .npm --prefer-offline
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+    phases:
+        build:
+            commands:
+                - nvm install 22.14.0
+                - nvm use 22.14.0
+                - yarn install
+                - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
-  phases:
-    build:
-      commands:
-        - npm run build
-  artifacts:
-    baseDirectory: .next
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - .next/cache/**/*
-      - .npm/**/*
-      - node_modules/**/*
+    phases:
+        build:
+            commands:
+                - npm run build
+    artifacts:
+        baseDirectory: .next
+        files:
+            - "**/*"
+    cache:
+        paths:
+            - .next/cache/**/*
+            - node_modules/**/*
