--- a/package.json
+++ b/package.json
@@ -1,31 +1,69 @@
 {
-  "name": "aws-amplify-gen2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^6.5.5",
-    "aws-amplify": "^6.6.6",
-    "next": "14.2.10",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@aws-amplify/backend": "^1.5.1",
-    "@aws-amplify/backend-cli": "^1.3.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "aws-cdk": "^2",
-    "aws-cdk-lib": "^2",
-    "constructs": "^10.3.0",
-    "esbuild": "^0.23.1",
-    "tsx": "^4.19.0",
-    "typescript": "^5.6.2"
-  }
+    "name": "aws-amplify-gen2",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+        "generate:sitemap": "node scripts/generate-sitemap.js",
+        "amplify": "amplify"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.13.8",
+        "@aws-amplify/auth": "^6.12.4",
+        "@aws-amplify/cli": "^13.0.1",
+        "@aws-amplify/core": "^6.11.4",
+        "@aws-amplify/ui-react": "^6.11.1",
+        "@aws-sdk/client-cognito-identity-provider": "^3.806.0",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@formspree/react": "^2.5.1",
+        "@mui/icons-material": "^7.1.0",
+        "@mui/material": "^7.1.0",
+        "apollo-server-micro": "^3.13.0",
+        "aws-amplify": "^6.14.4",
+        "clsx": "^2.1.1",
+        "execa": "^9.5.2",
+        "file-saver": "^2.0.5",
+        "global": "^4.4.0",
+        "graphql": "^16.11.0",
+        "js-cookie": "^3.0.5",
+        "next": "15.3.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-hook-form": "7",
+        "react-icons": "^5.5.0",
+        "react-markdown": "^10.1.0",
+        "remark-gfm": "^4.0.1",
+        "sass": "1.60.0",
+        "sharp": "^0.34.1",
+        "sitemap": "^8.0.0"
+    },
+    "devDependencies": {
+        "@aws-amplify/backend": "^1.16.1",
+        "@aws-amplify/backend-cli": "^1.3.0",
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/js-cookie": "^3.0.6",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@typescript-eslint/parser": "^8.32.1",
+        "aws-cdk": "^2",
+        "aws-cdk-lib": "^2",
+        "constructs": "^10.3.0",
+        "esbuild": "^0.23.1",
+        "eslint": "^9.15.0",
+        "eslint-config-next": "15.3.1",
+        "postcss": "^8",
+        "prettier": "^3.5.3",
+        "sass-loader": "13.0.0",
+        "tailwindcss": "^4",
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.2",
+        "webpack": "^5.0.0"
+    }
 }
