--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
         "webpack": "^5.0.0"
+    },
+    "resolutions": {
+        "graphql": "^16.11.0"
     }
 }
