--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-        "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+        "lint": "next lint",
         "generate:sitemap": "node scripts/generate-sitemap.js",
         "amplify": "amplify"
     },
     "dependencies": {
-        "@apollo/client": "^3.13.8",
         "@aws-amplify/auth": "^6.12.4",
         "@aws-amplify/cli": "^13.0.1",
         "@aws-amplify/core": "^6.11.4",
@@ -23,13 +21,11 @@
         "@formspree/react": "^2.5.1",
         "@mui/icons-material": "^7.1.0",
         "@mui/material": "^7.1.0",
-        "apollo-server-micro": "^3.13.0",
         "aws-amplify": "^6.14.4",
         "clsx": "^2.1.1",
         "execa": "^9.5.2",
         "file-saver": "^2.0.5",
         "global": "^4.4.0",
-        "graphql": "^16.11.0",
         "js-cookie": "^3.0.5",
         "next": "15.3.1",
         "react": "^19.0.0",
@@ -65,8 +61,5 @@
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
         "webpack": "^5.0.0"
-    },
-    "resolutions": {
-        "graphql": "^16.11.0"
     }
 }
