--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@aws-amplify/core": "^6.11.4",
         "@aws-amplify/ui-react": "^6.11.1",
         "@aws-sdk/client-cognito-identity-provider": "^3.806.0",
+        "@aws-sdk/types": "^3.821.0",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@formspree/react": "^2.5.1",
@@ -28,8 +29,8 @@
         "global": "^4.4.0",
         "js-cookie": "^3.0.5",
         "next": "15.3.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
         "react-hook-form": "7",
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
@@ -61,5 +62,6 @@
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
         "webpack": "^5.0.0"
-    }
+    },
+    "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
 }
