--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,17 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+!.yarn/patches/
+!.yarn/patches/**
+!.yarn/plugins/
+!.yarn/plugins/**
+!.yarn/releases/
+!.yarn/releases/**
+!.yarn/versions/
+!.yarn/versions/**
+
+# puis on ignore tout le reste de .yarn
+/.yarn/*
 
 # testing
 /coverage
