--- a/amplify.yml
+++ b/amplify.yml
@@ -1,4 +1,5 @@
 version: 1
+
 backend:
     phases:
         build:
@@ -6,16 +7,21 @@ backend:
                 - nvm install 22.14.0
                 - nvm use 22.14.0
                 - corepack enable
-                - corepack prepare yarn@4.9.2 --activate
-                - yarn cache clean
+                - corepack prepare yarn@3.6.1 --activate
                 - yarn install --immutable
                 - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+
 frontend:
     phases:
+        preBuild:
+            commands:
+                - corepack enable
+                - corepack prepare yarn@3.6.1 --activate
+                - yarn install --immutable
         build:
             commands:
                 - export NEXT_TELEMETRY_DISABLED=1
-                - npm run build
+                - yarn build
 
     artifacts:
         baseDirectory: .next
@@ -24,12 +30,6 @@ frontend:
 
     cache:
         paths:
-            - .next/cache/**/*
-            - .npm/**/*
+            - .yarn/cache/**/*
+            - .yarn/unplugged/**/*
             - node_modules/**/*
-
-    customHeaders: # ← même niveau que phases, artifacts, cache
-        - pattern: "/img/**"
-          headers:
-              - key: "Cache-Control"
-                value: "public, max-age=31536000, immutable"
