--- a/amplify.yml
+++ b/amplify.yml
@@ -5,8 +5,8 @@ backend:
         build:
             commands:
                 - nvm install 22.14.0
-                - nvm use 22.14.0             
-                - npm install -g @aws-amplify/cli@latest
+                - nvm use 22.14.0
+                - npm install -g @aws-amplify/cli@14.35.4
                 - corepack enable
                 - corepack prepare yarn@3.6.1 --activate
                 - yarn install --immutable
