--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,12 @@
 /node_modules
 /.pnp
 .pnp.js
-!.yarn/patches/
-!.yarn/patches/**
-!.yarn/plugins/
-!.yarn/plugins/**
-!.yarn/releases/
-!.yarn/releases/**
-!.yarn/versions/
-!.yarn/versions/**
-
-# puis on ignore tout le reste de .yarn
-/.yarn/*
+.yarn/install-state.gz
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 /coverage
