--- a/amplify.yml
+++ b/amplify.yml
@@ -1,28 +1,21 @@
 version: 1
-
 backend:
     phases:
         build:
             commands:
                 - nvm install 22.14.0
                 - nvm use 22.14.0
-                - npm install -g @aws-amplify/cli@14.35.4
                 - corepack enable
-                - corepack prepare yarn@3.6.1 --activate
+                - corepack prepare yarn@4.9.2 --activate
+                - yarn cache clean
                 - yarn install --immutable
                 - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
-
 frontend:
     phases:
-        preBuild:
-            commands:
-                - corepack enable
-                - corepack prepare yarn@3.6.1 --activate
-                - yarn install --immutable
         build:
             commands:
                 - export NEXT_TELEMETRY_DISABLED=1
-                - yarn build
+                - npm run build
 
     artifacts:
         baseDirectory: .next
@@ -31,6 +24,12 @@ frontend:
 
     cache:
         paths:
-            - .yarn/cache/**/*
-            - .yarn/unplugged/**/*
+            - .next/cache/**/*
+            - .npm/**/*
             - node_modules/**/*
+
+    customHeaders: # ← même niveau que phases, artifacts, cache
+        - pattern: "/img/**"
+          headers:
+              - key: "Cache-Control"
+                value: "public, max-age=31536000, immutable"
