--- a/amplify.yml
+++ b/amplify.yml
@@ -15,7 +15,7 @@ frontend:
         build:
             commands:
                 - export NEXT_TELEMETRY_DISABLED=1
-                - npm run build
+                - yarn run build
 
     artifacts:
         baseDirectory: .next
