--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "@typescript-eslint/parser": "^8.32.1",
+        "ampx": "^0.2.2",
         "aws-cdk": "^2",
         "aws-cdk-lib": "^2",
         "constructs": "^10.3.0",
