--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,6 @@
         "src/hooks/useUserProfile.tsx",
         "src/components/Blog/Create/components/EditableField.jsx",
         "src/hooks/useEditableForm.js"
-, "src/components/Blog/Create/components/ArticleEditForm.jsx"    ],
+, "src/components/Blog/Create/components/ArticleEditForm.jsx", "src/components/Blog/Create/CreateAuthor.tsx"    ],
     "exclude": ["node_modules", "amplify"]
 }
