--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
             "@hooks/*": ["src/hooks/*"],
             "@context/*": ["src/context/*"],
             "@utils/*": ["src/utils/*"],
-            "@types/*": ["src/types/*"],
+            "@myTypes/*": ["src/types/*"],
+            "@entities/*": ["src/entities/*"],
             "@public/*": ["public/*"]
         },
         "plugins": [
