--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,6 @@
         "src/components/Blog/Create/PostsForm.jsx",
         "src/components/Blog/manage/sections/SectionsForm.tsx",
         "src/components/Blog/manage/components/ItemSelector.tsx"
-    ],
+, ".Help/examples/useCrudManager.ts", ".Help/examples/createEntityTypes.ts"    ],
     "exclude": ["node_modules", "amplify", ".Help/examples"]
 }
