--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
         "@mui/material": "^7.1.0",
         "aws-amplify": "^6.14.4",
         "clsx": "^2.1.1",
+        "dependency-cruiser": "^17.0.1",
         "execa": "^9.5.2",
         "file-saver": "^2.0.5",
         "global": "^4.4.0",
         "js-cookie": "^3.0.5",
+        "madge": "^8.0.0",
         "next": "15.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
