--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "remark-gfm": "^4.0.1",
         "sass": "1.60.0",
         "sharp": "^0.34.1",
-        "ts-morph": "^26.0.0"
+        "ts-morph": "^26.0.0",
+        "zod": "^4.0.17"
     },
     "devDependencies": {
         "@aws-amplify/backend": "^1.16.1",
