--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "amplify": "amplify",
         "audit:summarize": "node scripts/summarize-audit.mjs",
         "gen:entities": "tsx scripts/generator/entry.ts",
-        "gen:entities:debug": "tsx scripts/generator/entry.ts --debug"
+        "gen:entities:debug": "tsx scripts/generator/entry.ts --debug",
+        "test": "vitest"
     },
     "dependencies": {
         "@aws-amplify/auth": "^6.13.0",
@@ -68,6 +69,7 @@
         "tailwindcss": "^4",
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
+        "vitest": "^3.2.4",
         "webpack": "^5.0.0"
     },
     "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
