--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
         "start": "next start",
-        "lint": "next lint",
+        "typecheck": "tsc --noEmit -p tsconfig.ci.json",
+        "lint": "eslint \"app/**/*.{ts,tsx,js,jsx}\" \"src/**/*.{ts,tsx,js,jsx}\"",
+        "build": "next build",
         "amplify": "amplify",
         "audit:summarize": "node scripts/summarize-audit.mjs",
         "gen:entities": "tsx scripts/generator/entry.ts",
@@ -52,23 +53,24 @@
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
         "@types/js-cookie": "^3.0.6",
-        "@types/node": "^20",
+        "@types/node": "22",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "@typescript-eslint/parser": "^8.32.1",
+        "@typescript-eslint/eslint-plugin": "^8",
+        "@typescript-eslint/parser": "^8",
         "ampx": "^0.2.2",
         "aws-cdk": "^2",
         "aws-cdk-lib": "^2",
         "constructs": "^10.3.0",
         "esbuild": "^0.23.1",
-        "eslint": "^9.15.0",
+        "eslint": "^8.57.0",
         "eslint-config-next": "15.3.1",
         "postcss": "^8",
         "prettier": "^3.6.2",
         "sass-loader": "13.0.0",
         "tailwindcss": "^4",
         "tsx": "^4.19.2",
-        "typescript": "^5.7.2",
+        "typescript": "^5.9.2",
         "vitest": "^3.2.4",
         "webpack": "^5.0.0"
     },
