--- a/amplify.yml
+++ b/amplify.yml
@@ -1,4 +1,5 @@
 version: 1
+
 backend:
     phases:
         build:
@@ -10,12 +11,25 @@ backend:
                 - yarn cache clean
                 - yarn install --immutable
                 - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+
 frontend:
     phases:
+        preBuild:
+            commands:
+                - export NODE_OPTIONS="--max-old-space-size=4096" # ↑ mémoire pour tsc/eslint/next
+                - export NEXT_TELEMETRY_DISABLED=1
+                - export NEXT_WORKER_CONCURRENCY=1 # ↓ workers pour limiter la RAM
+                - export NEXT_DISABLE_ESLINT=1 # on lint séparément
+                # (optionnel) sourcemaps prod off pour réduire la charge
+                - export NEXT_DISABLE_SOURCEMAPS=1
         build:
             commands:
-                - export NEXT_TELEMETRY_DISABLED=1
-                - yarn run build
+                # 1) Type-check (tombe la build si erreurs)
+                - yarn tsc --noEmit
+                # 2) Lint (tombe la build si warnings -> ajuste si besoin)
+                - yarn eslint . --max-warnings=0 --cache
+                # 3) Build Next sans relancer eslint/type-check
+                - yarn next build
 
     artifacts:
         baseDirectory: .next
