--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "start": "next start",
-        "typecheck": "tsc --noEmit -p tsconfig.ci.json",
-        "lint": "eslint \"app/**/*.{ts,tsx,js,jsx}\" \"src/**/*.{ts,tsx,js,jsx}\"",
         "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
         "amplify": "amplify",
         "audit:summarize": "node scripts/summarize-audit.mjs",
         "gen:entities": "tsx scripts/generator/entry.ts",
@@ -51,13 +50,13 @@
         "@aws-amplify/backend": "^1.16.1",
         "@aws-amplify/backend-cli": "^1.3.0",
         "@eslint/eslintrc": "^3",
+        "@rushstack/eslint-patch": "^1",
         "@tailwindcss/postcss": "^4",
         "@types/js-cookie": "^3.0.6",
-        "@types/node": "22",
+        "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "@typescript-eslint/eslint-plugin": "^8",
-        "@typescript-eslint/parser": "^8",
+        "@typescript-eslint/parser": "^8.32.1",
         "ampx": "^0.2.2",
         "aws-cdk": "^2",
         "aws-cdk-lib": "^2",
@@ -70,8 +69,7 @@
         "sass-loader": "13.0.0",
         "tailwindcss": "^4",
         "tsx": "^4.19.2",
-        "typescript": "^5.9.2",
-        "vitest": "^3.2.4",
+        "typescript": "^5.7.2",
         "webpack": "^5.0.0"
     },
     "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
