--- a/amplify.yml
+++ b/amplify.yml
@@ -1,21 +1,31 @@
 version: 1
+
 backend:
     phases:
         build:
             commands:
-                - nvm install 22.14.0
-                - nvm use 22.14.0
+                - nvm install 20.18.0
+                - nvm use 20.18.0
                 - corepack enable
                 - corepack prepare yarn@4.9.2 --activate
                 - yarn cache clean
                 - yarn install --immutable
                 - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+
 frontend:
     phases:
+        preBuild:
+            commands:
+                - nvm install 20.18.0
+                - nvm use 20.18.0
+                - corepack enable
+                - corepack prepare yarn@4.9.2 --activate
+                - yarn install --immutable
         build:
             commands:
+                - export NODE_OPTIONS="--max-old-space-size=6144"
                 - export NEXT_TELEMETRY_DISABLED=1
-                - yarn run build
+                - yarn build
 
     artifacts:
         baseDirectory: .next
@@ -25,8 +35,9 @@ frontend:
     cache:
         paths:
             - .next/cache/**/*
-            - .npm/**/*
-            - node_modules/**/*
+            - .yarn/cache/**/*
+            - .pnp.cjs
+            - .pnp.loader.mjs
 
     customHeaders:
         - pattern: "/img/**"
