--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@aws-amplify/backend": "^1.16.1",
         "@aws-amplify/backend-cli": "^1.3.0",
         "@eslint/eslintrc": "^3",
+        "@rushstack/eslint-patch": "^1",
         "@tailwindcss/postcss": "^4",
         "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
@@ -61,7 +62,7 @@
         "aws-cdk-lib": "^2",
         "constructs": "^10.3.0",
         "esbuild": "^0.23.1",
-        "eslint": "^9.15.0",
+        "eslint": "^8.57.0",
         "eslint-config-next": "15.3.1",
         "postcss": "^8",
         "prettier": "^3.6.2",
@@ -69,8 +70,10 @@
         "tailwindcss": "^4",
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
-        "vitest": "^3.2.4",
         "webpack": "^5.0.0"
     },
-    "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
+    "packageManager": "yarn@4.9.2",
+    "engines": {
+        "node": "20.18.x"
+    }
 }
