--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,13 +40,7 @@
         "src/**/*.ts",
         "src/**/*.tsx",
         "public/**/*.json",
-        ".next/types/**/*.ts",
-        "src/hooks/useEditableForm.js",
-        "src/components/Blog/Create/components/ArticleEditForm.jsx",
-        "src/components/Blog/manage/authors/CreateAuthor.tsx",
-        "src/components/Blog/Create/components/TagPostManager.tsx",
-        "src/components/Blog/Create/PostsForm.jsx",
-        "src/components/Blog/manage/sections/SectionsForm.tsx"
+        ".next/types/**/*.ts"
     ],
     "exclude": ["node_modules", "amplify", ".Help/examples"]
 }
