--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
         "esbuild": "^0.23.1",
         "eslint": "^8.57.0",
         "eslint-config-next": "15.3.1",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-unused-imports": "^4.1.4",
         "postcss": "^8",
         "prettier": "^3.6.2",
         "sass-loader": "13.0.0",
