--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
         "react-modal-component-by-jeremy": "^1.1.1",
+        "rehype-sanitize": "^6.0.0",
         "remark-gfm": "^4.0.1",
         "sass": "1.60.0",
         "sharp": "^0.34.1",
