--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "audit:summarize": "node scripts/summarize-audit.mjs",
         "gen:entities": "tsx scripts/generator/entry.ts",
         "gen:entities:debug": "tsx scripts/generator/entry.ts --debug",
-        "test": "vitest"
+        "test": "vitest run --passWithNoTests",
+        "test:watch": "vitest watch",
+        "test:coverage": "vitest run --coverage",
+        "e2e": "playwright test"
     },
     "dependencies": {
         "@aws-amplify/auth": "^6.13.0",
@@ -51,13 +54,18 @@
         "@aws-amplify/backend": "^1.16.1",
         "@aws-amplify/backend-cli": "^1.3.0",
         "@eslint/eslintrc": "^3",
+        "@faker-js/faker": "^9.0.0",
         "@rushstack/eslint-patch": "^1",
         "@tailwindcss/postcss": "^4",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.0.0",
+        "@testing-library/user-event": "^14.5.2",
         "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "@typescript-eslint/parser": "^8.32.1",
+        "@vitest/coverage-v8": "^2.1.4",
         "ampx": "^0.2.2",
         "aws-cdk": "^2",
         "aws-cdk-lib": "^2",
@@ -67,13 +75,19 @@
         "eslint-config-next": "15.3.1",
         "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-unused-imports": "^4.1.4",
+        "jsdom": "^24.1.1",
+        "msw": "^2.6.2",
+        "playwright": "^1.48.2",
         "postcss": "^8",
         "prettier": "^3.6.2",
         "sass-loader": "13.0.0",
         "tailwindcss": "^4",
+        "ts-node": "^10.9.2",
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
-        "webpack": "^5.0.0"
+        "vitest": "^2.1.4",
+        "webpack": "^5.0.0",
+        "whatwg-fetch": "^3.6.20"
     },
     "packageManager": "yarn@4.9.2",
     "engines": {
