--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
         "tailwindcss": "^4",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.2",
-        "typescript": "^5.7.2",
+        "typescript": "5.4.4",
         "vitest": "^2.1.4",
         "webpack": "^5.0.0",
         "whatwg-fetch": "^3.6.20"
