--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@faker-js/faker": "^9.0.0",
         "@rushstack/eslint-patch": "^1",
         "@tailwindcss/postcss": "^4",
+        "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
