--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "sass-loader": "13.0.0",
         "tailwindcss": "^4",
         "ts-node": "^10.9.2",
+        "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
         "typescript": "5.4.4",
         "vitest": "^2.1.4",
