--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "gen:entities": "tsx scripts/generator/entry.ts",
         "gen:entities:debug": "tsx scripts/generator/entry.ts --debug",
         "test": "vitest run --passWithNoTests",
-        "test:watch": "vitest watch",
+        "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
         "e2e": "playwright test"
     },
