--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
         "target": "ES2017",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
+        "allowJs": false,
+        "skipLibCheck": false,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "noUnusedLocals": true,
