--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "eslint": "^8.57.0",
         "eslint-config-next": "15.3.1",
         "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-internal": "file:eslint-plugin-internal",
         "eslint-plugin-unused-imports": "^4.2.0",
         "jsdom": "^24.1.1",
         "msw": "^2.6.2",
