chore: clean git cache

--- a/.hintrc
+++ b/.hintrc
@@ -1,6 +1,6 @@
 {
     "extends": ["development"],
     "hints": {
-        "apple-touch-icons": "off",
-    },
+        "apple-touch-icons": "off"
+    }
 }
