--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
         "audit:summarize": "node scripts/summarize-audit.mjs",
         "gen:entities": "tsx scripts/generator/entry.ts",
         "gen:entities:debug": "tsx scripts/generator/entry.ts --debug",
-        "test": "vitest run",
-        "test:watch": "vitest",
-        "test:coverage": "vitest run --coverage",
-        "e2e": "playwright test"
+        "test": "yarn test:unit && yarn test:api && yarn test:integration && yarn test:e2e",
+        "test:unit": "vitest run ./tests/unit --coverage",
+        "test:api": "vitest run ./tests/api --coverage",
+        "test:integration": "vitest run ./tests/integration --coverage",
+        "test:e2e": "playwright test",
+        "generate:sitemap": "node scripts/generate-sitemap.js"
     },
     "dependencies": {
         "@aws-amplify/auth": "^6.13.0",
-        "@aws-amplify/cli": "^13.0.1",
         "@aws-amplify/core": "^6.11.4",
         "@aws-amplify/ui-react": "^6.11.1",
         "@aws-sdk/client-cognito-identity-provider": "^3.806.0",
-        "@aws-sdk/types": "^3.821.0",
+        "@aws-sdk/types": "^3.862.0",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@formspree/react": "^2.5.1",
@@ -30,31 +31,30 @@
         "@mui/material": "^7.1.0",
         "aws-amplify": "^6.14.4",
         "clsx": "^2.1.1",
-        "dependency-cruiser": "^17.0.1",
-        "execa": "^9.5.2",
         "file-saver": "^2.0.5",
         "global": "^4.4.0",
         "js-cookie": "^3.0.5",
-        "madge": "^8.0.0",
         "next": "15.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7",
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
-        "react-modal-component-by-jeremy": "^1.1.1",
+        "react-modal-component-by-jeremy": "^1.1.5",
         "rehype-sanitize": "^6.0.0",
         "remark-gfm": "^4.0.1",
         "sass": "1.60.0",
         "sharp": "^0.34.1",
-        "ts-morph": "^26.0.0",
-        "zod": "^4.0.17"
+        "sitemap": "^8.0.0",
+        "zod": "^3.25.17"
     },
     "devDependencies": {
         "@aws-amplify/backend": "^1.16.1",
         "@aws-amplify/backend-cli": "^1.3.0",
+        "@aws-amplify/cli": "^13.0.1",
         "@eslint/eslintrc": "^3",
         "@faker-js/faker": "^9.0.0",
+        "@playwright/test": "^1.48.2",
         "@rushstack/eslint-patch": "^1",
         "@tailwindcss/postcss": "^4",
         "@testing-library/dom": "^10.4.1",
@@ -71,19 +71,22 @@
         "aws-cdk": "^2",
         "aws-cdk-lib": "^2",
         "constructs": "^10.3.0",
+        "dependency-cruiser": "^17.0.1",
         "esbuild": "^0.23.1",
-        "eslint": "^8.57.0",
+        "eslint": "^9.15.0",
         "eslint-config-next": "15.3.1",
         "eslint-plugin-import": "^2.32.0",
-        "eslint-plugin-internal": "file:eslint-plugin-internal",
         "eslint-plugin-unused-imports": "^4.2.0",
+        "execa": "^9.5.2",
         "jsdom": "^24.1.1",
+        "madge": "^8.0.0",
         "msw": "^2.6.2",
         "playwright": "^1.48.2",
         "postcss": "^8",
         "prettier": "^3.6.2",
         "sass-loader": "13.0.0",
         "tailwindcss": "^4",
+        "ts-morph": "^26.0.0",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
@@ -92,8 +95,32 @@
         "webpack": "^5.0.0",
         "whatwg-fetch": "^3.6.20"
     },
-    "packageManager": "yarn@4.9.2",
+    "browserslist": [
+        "chrome >= 115",
+        "firefox >= 115",
+        "edge >= 115",
+        "safari >= 16"
+    ],
+    "packageManager": "yarn@4.9.4",
     "engines": {
         "node": "20.18.x"
+    },
+    "packageExtensions": {
+        "@aws-amplify/plugin-types@*": {
+            "peerDependencies": {
+                "@aws-sdk/types": ">=3.800.0"
+            }
+        },
+        "@aws-amplify/backend-output-schemas@*": {
+            "peerDependencies": {
+                "zod": ">=3.25.0"
+            }
+        },
+        "@testing-library/react@*": {
+            "peerDependencies": {
+                "react": ">=18",
+                "react-dom": ">=18"
+            }
+        }
     }
 }
